--- a/melaniebeeckman-astro/src/layouts/Layout.astro
+++ b/melaniebeeckman-astro/src/layouts/Layout.astro
@@ -1,11 +1,28 @@
+---
+import "../styles/global.css";
+import { getLangFromUrl, translate } from '@i18n/utils';
+
+const lang = getLangFromUrl(Astro.url);
+
+const {
+	title = 'default_title',
+	description = 'default_description',
+} = Astro.props
+
+const translated_title = translate(lang, title);
+const translated_description = translate(lang, description);
+
+---
 <!doctype html>
-<html lang="en">
+<html lang={lang}>
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{translated_title}</title>
+		<meta name='title' content={title} />
+		<meta name='description' content={translated_description} />
 	</head>
 	<body>
 		<slot />
