--- a/melaniebeeckman-astro/src/pages/404.astro
+++ b/melaniebeeckman-astro/src/pages/404.astro
@@ -1,25 +1,7 @@
 ---
-import Layout from '@layouts/Layout.astro'
-import { translate, getLangFromUrl } from '../i18n/utils';
-import { getRelativeLocaleUrl } from 'astro:i18n';
+import { defaultLang } from '../i18n/languages';
 
-const lang = getLangFromUrl(Astro.url);
-const homeURL = getRelativeLocaleUrl(lang, "");
+const preferredLang = Astro.currentLocale ?? defaultLang;
 
+return Astro.redirect(`/${preferredLang}/404`, 302);
 ---
-
-<Layout title="404.title">
-    <div class="min-h-[70vh] flex flex-col items-center justify-center text-center">
-        <h1 class="text-9xl font-black text-base-content mb-4">404</h1>
-        <h2 class="text-4xl font-bold text-base-content mb-8">{translate(lang, '404.title')}</h2>
-        <p class="text-lg text-base-content/80 mb-8">{translate(lang, '404.description')}</p>
-        <div class="flex gap-4">
-            <a
-                    href={homeURL}
-                    class="btn btn-primary"
-            >
-                {translate(lang, '404.goHome')}
-            </a>
-        </div>
-    </div>
-</Layout>
