Use rewrite for default 404 page

--- a/melaniebeeckman-astro/src/pages/404.astro
+++ b/melaniebeeckman-astro/src/pages/404.astro
@@ -3,5 +3,5 @@ import { defaultLang } from '../i18n/languages';
 
 const preferredLang = Astro.currentLocale ?? defaultLang;
 
-return Astro.redirect(`/${preferredLang}/404`, 302);
+return Astro.rewrite(`/${preferredLang}/404`);
 ---
