Adjust home page to use strapi profile endpoint with locale support

--- a/melaniebeeckman-astro/src/components/LanguagePicker.astro
+++ b/melaniebeeckman-astro/src/components/LanguagePicker.astro
@@ -1,6 +1,6 @@
 ---
-import { languages } from '../i18n/languages';
-import { type Language } from '../i18n/utils';
+import { languages } from '@i18n/languages';
+import { type Language } from '@i18n/utils';
 
 interface Props {
     lang: Language;
