--- a/melaniebeeckman-astro/src/layouts/Layout.astro
+++ b/melaniebeeckman-astro/src/layouts/Layout.astro
@@ -1,10 +1,10 @@
 ---
-import "../styles/global.css";
+import "@styles/global.css";
 import { translate, type Language } from '@i18n/utils';
 import BetterIcon from '@components/BetterIcon.astro';
 import Navbar from '@components/Navbar.astro';
 import Footer from '@components/Footer.astro';
-import LanguagePicker from '../components/LanguagePicker.astro';
+import LanguagePicker from '@components/LanguagePicker.astro';
 
 interface Props {
 	title?: string;
