--- a/melaniebeeckman-astro/src/pages/index.astro
+++ b/melaniebeeckman-astro/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from '@layouts/Layout.astro';
-import Welcome from '@components/Welcome.astro';
-import { getAsLanguage } from '../i18n/utils';
+import { getAsLanguage } from '@i18n/utils';
+import IndexComponent from '@components/IndexComponent.astro';
 
 const lang = getAsLanguage(Astro.params.lang, Astro.currentLocale);
 
 ---
 
 <Layout lang={lang}>
-    <Welcome />
+    <IndexComponent  lang={lang} />
 </Layout>
