--- a/melaniebeeckman-astro/src/pages/404.astro
+++ b/melaniebeeckman-astro/src/pages/404.astro
@@ -1,5 +1,5 @@
 ---
-import { defaultLang } from '../i18n/languages';
+import { defaultLang } from '@i18n/languages';
 
 const preferredLang = Astro.currentLocale ?? defaultLang;
 
