--- a/melaniebeeckman-astro/src/pages/[lang]/404.astro
+++ b/melaniebeeckman-astro/src/pages/[lang]/404.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@layouts/Layout.astro';
-import { getAsLanguage, getLanguagePaths, translate } from '../../i18n/utils';
+import { getAsLanguage, getLanguagePaths, translate } from '@i18n/utils';
 import { getRelativeLocaleUrl } from 'astro:i18n';
 
 const lang = getAsLanguage(Astro.params.lang, Astro.currentLocale);
