--- a/melaniebeeckman-astro/src/components/LanguagePicker.astro
+++ b/melaniebeeckman-astro/src/components/LanguagePicker.astro
@@ -42,7 +42,7 @@ import 'flag-icons/css/flag-icons.min.css';
                         title={label}
                 >
                     <span class={`fi fi-${countryCode} w-5 h-5`}></span>
-                    <span>{label}</span>
+                    <span class="text-xs text-neutral-700">{label}</span>
                 </a>
         );
     })}
