--- a/melaniebeeckman-astro/src/components/Hero.astro
+++ b/melaniebeeckman-astro/src/components/Hero.astro
@@ -1,34 +1,42 @@
 ---
 import { Image } from 'astro:assets'
 import { type Language } from '@i18n/utils';
+import Markdown from '@components/Markdown.astro';
+import { getMediaUrl } from '@interfaces/strapi-media';
+import { translate } from '../i18n/utils';
 
 interface Props {
-  fullName?: string;
-  title?: string;
-  description?: string;
-  profilePicture?: any;
-  lang: Language;
+    fullName?: string;
+    title?: string;
+    description?: string;
+    profilePicture?: any;
+    lang: Language;
 }
 
-const {fullName, title, description, profilePicture, lang} = Astro.props
+const { fullName, title, description, profilePicture, lang } = Astro.props
+const imageSource = getMediaUrl(profilePicture);
 ---
-<div class='flex-1'>
-  <h1 class='text-4xl font-bold mb-4'>
-    <span class='text-secondary'>{fullName}</span>
-  </h1>
-  {title && <p class='text-xl text-gray-600 mb-4'>{title}</p>}
-  {description &&
-      <p class='text-lg mb-6'>
-        {description}
-      </p>
-  }
+<div class='flex flex-col sm:flex-row items-start sm:items-center gap-4 sm:gap-12 w-full'>
+    <div class='flex-shrink-0'>
+        <Image
+                src={imageSource}
+                inferSize={true}
+                alt={`Picture for ${fullName}`}
+                class='mask mask-circle w-24 h-24 sm:w-44 sm:h-44 md:w-56 md:h-56 lg:w-72 lg:h-72'
+        />
+    </div>
+
+    <!-- Text content -->
+    <div class='flex-1'>
+        <h1 class='text-3xl sm:text-4xl font-bold mb-2 sm:mb-4'>
+            {translate(lang, 'home.welcome')} <span class='text-secondary'>{fullName}</span>
+        </h1>
+        {title && <p class='text-lg sm:text-xl text-gray-600 mb-2 sm:mb-4'>{title}</p>}
+        {description &&
+                <div class="text-sm sm:text-base">
+                    <Markdown content={description}></Markdown>
+                </div>
+        }
+    </div>
 </div>
-<div class='size-72 lg:block hidden'>
-  <!-- Add your profile image -->
-  <Image
-    src={profilePicture}
-    inferSize={true}
-    alt={`Picture for ${fullName}`}
-    class='w-full h-full mask mask-circle size-44'
-  />
-</div>
+
