--- a/melaniebeeckman-astro/src/styles/global.css
+++ b/melaniebeeckman-astro/src/styles/global.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 @plugin "daisyui" {
-    themes: caramellatte --default;
+    themes: nord --default;
 }
