--- a/melaniebeeckman-astro/src/components/Navbar.astro
+++ b/melaniebeeckman-astro/src/components/Navbar.astro
@@ -39,13 +39,10 @@ const { profile, profilePicture, fullName } = await getProfileData(lang);
                         <a href={homeURL} class='text-lg'>{translate(lang, 'nav.home')}</a>
 					</li>
 					<li>
-                        <a href={researchUrl} class='text-lg'>{translate(lang, 'nav.research')}</a>
+						<a href={cvUrl} class='text-lg'>{translate(lang, 'nav.aboutMe')}</a>
 					</li>
 					<li>
-                        <a href={papersUrl} class='text-lg'>{translate(lang, 'nav.papers')}</a>
-					</li>
-					<li>
-                        <a href={cvUrl} class='text-lg'>{translate(lang, 'nav.cv')}</a>
+                        <a href={cvUrl} class='text-lg'>{translate(lang, 'nav.services')}</a>
                     </li>
 					<li>
 						<a href={contactUrl} class='text-lg'>{translate(lang, 'nav.contact')}</a>
